--- a/styles/style.css
+++ b/styles/style.css
@@ -240,7 +240,7 @@ html {
   padding: 5rem 0;
 }
 
-body, h1, h2, h3, ul, p {
+body, h1, h2, h3, h4, ul, p {
   padding: 0;
   margin: 0;
 }
@@ -306,6 +306,14 @@ svg {
   padding: 2.5rem;
   margin: 0 auto;
   width: 65%;
+}
+
+.division {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 80%;
 }
 
 button {
@@ -623,15 +631,15 @@ footer .wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: 0;
 }
 footer .wrapper .footerCol {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: 0;
   width: 25%;
-  height: 45vh;
+  height: 42vh;
 }
 footer .wrapper .footerCol h3 {
   padding-bottom: 2rem;
@@ -644,15 +652,7 @@ footer .wrapper .footerCol h3 {
 }
 footer .wrapper .first img {
   width: 40%;
-  padding: 0.75rem 0;
   filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);
-}
-footer .wrapper .first nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
 }
 footer .wrapper .first nav ul {
   display: flex;
@@ -661,68 +661,64 @@ footer .wrapper .first nav ul {
   align-items: center;
   width: 60%;
 }
-footer .wrapper .second {
+footer .second {
   padding-left: 1rem;
 }
-footer .wrapper .second nav {
-  height: 100%;
-}
-footer .wrapper .second nav ul {
+footer .second nav ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: 0;
   height: 100%;
 }
-footer .wrapper .third ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  height: 100%;
-}
-footer .wrapper .third ul li {
+
+.third li {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: 0;
 }
-footer .wrapper .third ul li .imageContainer {
+.third li .imageContainer {
   width: 33.3333333333%;
 }
-footer .wrapper .third ul li .textContainer {
+.third li .textContainer {
   width: 75%;
   padding-left: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: 0;
 }
-footer .wrapper .third ul li .textContainer .item {
+.third li .textContainer .item {
   font-family: "Lora", serif;
+  font-size: 0.8rem;
   font-weight: 600;
-  font-size: 0.9rem;
+  letter-spacing: 0;
+  line-height: 0rem;
+  text-transform: 0;
 }
-footer .wrapper .third ul li .textContainer .price {
+.third li .textContainer .price {
   color: #207200;
   font-weight: 600;
 }
-footer .wrapper .fourth {
+
+.fourth {
   padding-left: 1.7rem;
 }
-footer .wrapper .fourth h3 {
-  padding: 0;
-  margin: 0;
-}
-footer .wrapper .fourth form {
-  padding-top: 1rem;
+.fourth form {
+  padding-top: 0.5rem;
   width: 100%;
 }
-footer .wrapper .fourth form input[type=text] {
+.fourth form input[type=text] {
   width: 100%;
   padding: 0.5rem 1rem;
 }
-footer .copyright {
-  text-align: center;
+
+.copyright {
   color: #fff;
   font-size: 0.8rem;
+  text-align: center;
 }
-footer .copyright a {
+.copyright a {
   color: #fff;
 }
