--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,28 +26,14 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     align-items: $alignItems;
 }
 
-@mixin btnStyling($bgColor, $color, $padding, $bRadius, $border, $margin, $boxShadow) {
+@mixin genStyling($bgColor, $color, $padding, $bRadius, $border, $margin, $boxShadow) {
     background-color: $bgColor;
     color: $color;
     padding: $padding;
+    margin: $margin;
     border-radius: $bRadius;
     border: $border;
-    margin: $margin;
     box-shadow: $boxShadow;
-}
-
-@mixin btnFontStyling($fontFamily, $fontSize, $fontWeight, $textTransform, $letterSpacing) {
-    font-family: $fontFamily;
-    font-size: $fontSize;
-    font-weight: $fontWeight;
-    text-transform: $textTransform;
-    letter-spacing: $letterSpacing;
-}
-
-@mixin bgImgStyling($bgPosition, $bgSize, $bgRepeat) {
-    background-position: $bgPosition;
-    background-size: $bgSize;
-    background-repeat: $bgRepeat;
 }
 
 @mixin fontStyling($fontFamily, $fontSize, $fontWeight, $letterSpacing, $lineHeight, $textTransform) {
@@ -57,6 +43,12 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     letter-spacing: $letterSpacing;
     line-height: $lineHeight;
     text-transform: $textTransform;
+}
+
+@mixin bgImgStyling($bgPosition, $bgSize, $bgRepeat) {
+    background-position: $bgPosition;
+    background-size: $bgSize;
+    background-repeat: $bgRepeat;
 }
 
 //generic styles//
@@ -110,7 +102,6 @@ img {
 svg {
     width: 1.75rem;
     height: 1.75rem;
-    object-fit: cover;
     background-color: $plantGreen;
     padding: 0.5rem;
     border-radius: 2rem;
@@ -139,23 +130,23 @@ svg {
 }
 
 button {
-    @include btnStyling($plantGreen, $white, 0.5rem 1rem, 1rem, none, 0, (0 0 3px rgba(0, 0, 0, 0.3)));
-    @include btnFontStyling($primaryFont, 0.9rem, 500, uppercase, 0.05rem);
+    @include genStyling($plantGreen, $white, 1rem, 1rem, none, 0, (0 0 3px rgba(0, 0, 0, 0.3)));
+    @include fontStyling($primaryFont, 0.9rem, 500, 0.05rem, 0, uppercase);
 }
 
 .btnVar2 {
-    @include btnStyling(0, 0, 0.3rem 0.75rem, 0.75rem, 0, 0, 0);
-    @include btnFontStyling(0, 0.8rem, 400, capitalize, 0);
+    @include genStyling(0, 0, 0.75rem, 0.75rem, 0, 0, 0);
+    @include fontStyling(0, 0.8rem, 400, 0, 0, capitalize);
 }
 
 .btnVar3 {
-    @include btnStyling(0, 0, 0.75rem 1.5rem, 1.5rem, 0, 0, 0);
-    @include btnFontStyling(0, 0.9rem, 400, capitalize, 0);
+    @include genStyling(0, 0, 1.25rem, 1.5rem, 0, 0, 0);
+    @include fontStyling(0, 0.9rem, 400, 0, 0, capitalize);
 }
 
 .btnVar4 {
-    @include btnStyling(0, 0, 1.1rem 2.25rem, 2.25rem, 0, 0, 0);
-    @include btnFontStyling(0, 0.9rem, 600, capitalize, 0);
+    @include genStyling(0, 0, 1.6rem 2rem, 2.25rem, 0, 0, 0);
+    @include fontStyling(0, 0.9rem, 600, 0, 0, capitalize);
 }
 
 //nagivation section//
@@ -234,11 +225,7 @@ header {
     }
     .textContainer .aboutFact {
         @include fontStyling($secondaryFont, 1.5rem, 500, 0.075rem, 2rem, capitalize);
-        background-color: #5EA85E; 
-        color: $white;
-        padding: 4rem;
-        border-radius: 2rem;
-        margin-left: 2rem;
+        @include genStyling(#5EA85E, $white, 4rem, 2rem, none, 0 0 0 2rem, none);
     }
 }
 
@@ -328,10 +315,7 @@ header {
             @include flexStyle(flex, row, space-between, center);
             .blogPost {
                 width: 32%;
-                border-radius: 6px;
-                background-color: $white;
-                padding: 1rem;
-                box-shadow: 0 5px 8px rgba(0, 0, 0, 0.3);
+                @include genStyling($white, 0, 1rem, 6px, 0, 0, 0 5px 8px rgba(0, 0, 0, 0.3));
                 .imageContainer {
                     width: 100%;
                 }
