--- a/styles/style.scss
+++ b/styles/style.scss
@@ -47,6 +47,8 @@ html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}bo
     font-weight: $fontWeight;
 }
 
+//check if this mixin is necessary//
+
 @mixin textStyling($letterSpacing, $lineHeight, $textTransform, $textDeco) {
     letter-spacing: $letterSpacing;
     line-height: $lineHeight;
@@ -256,7 +258,8 @@ header {
                     width: 100%;
                     font-size: 0;
                 }
-                .productInfoContainer {
+                .textContainer {
+                    width: 100%;
                     padding: 0.75rem;
                     border: 1.5px solid #EAEAEA;
                     border-top: none;
