--- a/styles/style.scss
+++ b/styles/style.scss
@@ -214,7 +214,7 @@ header {
 //about section//
 
 .about .wrapper {
-    @include flexStyle(flex, 0, space-between, flex-start);
+    @include flexStyle(flex, 0, space-between, 0);
     .textContainer {
         h2 {
             @include fontStyling(0, 1.25rem, 0);
@@ -246,8 +246,9 @@ header {
 }
 
 //shop section//
+
 .shop .wrapper {
-        @include flexStyle(flex, column, center, center);
+        @include flexStyle(flex, column, space-between, center);
         .productGallery {
             @include flexStyle(flex, row, space-between, center);
             li {
@@ -259,9 +260,7 @@ header {
                     font-size: 0;
                 }
                 .textContainer {
-                    width: 100%;
-                    padding: 0.75rem;
-                    border: 1.5px solid #EAEAEA;
+                    @include boxModel(100%, auto, 0.75rem, 1.5px solid #EAEAEA, none, none);
                     border-top: none;
                     p {
                         padding-top: 0.75rem;
