--- a/styles/style.css
+++ b/styles/style.css
@@ -293,7 +293,7 @@ svg {
   padding: 0.5rem;
   border: none;
   border-radius: 2rem;
-  margin: 0 2rem 0 0;
+  margin: none;
   background-color: #207200;
   color: 0;
   box-shadow: none;
@@ -426,16 +426,21 @@ header {
   height: 100vh;
 }
 
+.parallax {
+  background-image: url(../assets/header/background.png);
+  height: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .hero {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   height: 90vh;
-  background-image: url(../assets/header/background.png);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 .hero .wrapper {
   display: flex;
