--- a/styles/style.css
+++ b/styles/style.css
@@ -389,28 +389,21 @@ button {
   font-weight: 600;
 }
 
+.flexRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 header nav {
   height: 10vh;
   position: relative;
   background-color: #fff;
   color: 0;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
-  display: flex;
-  flex-direction: 0;
-  justify-content: 0;
-  align-items: center;
-}
-header nav .wrapper {
-  display: flex;
-  flex-direction: 0;
-  justify-content: space-between;
-  align-items: center;
 }
 header nav .wrapper ul {
-  display: flex;
-  flex-direction: 0;
-  justify-content: space-between;
-  align-items: center;
   text-transform: uppercase;
   font-weight: 600;
 }
@@ -436,17 +429,7 @@ header {
 }
 
 .hero {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
   height: 90vh;
-}
-.hero .wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
 }
 .hero .textContainer {
   padding-right: 2rem;
@@ -465,10 +448,7 @@ header {
 }
 
 .about .wrapper {
-  display: flex;
-  flex-direction: 0;
-  justify-content: space-between;
-  align-items: 0;
+  align-items: flex-start;
 }
 .about .wrapper .textContainer h2 {
   font-family: 0;
@@ -524,12 +504,6 @@ header {
   justify-content: space-between;
   align-items: center;
 }
-.shop .wrapper .productGallery {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
 .shop .wrapper .productGallery li {
   max-width: 24%;
   margin-bottom: 3rem;
@@ -560,7 +534,7 @@ header {
 .shop .wrapper .productGallery li .textContainer button {
   position: absolute;
 }
-.shop .wrapper .productGallery .shopBtn {
+.shop .wrapper .shopBtn {
   margin-top: 3rem;
 }
 
@@ -580,21 +554,9 @@ header {
 .gallery .wrapper .mainGallery {
   padding: 2rem 0 4rem 0;
 }
-.gallery .wrapper .mainGallery .col2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
 .gallery .wrapper .mainGallery .col2 li {
   width: calc(50% - 5px);
   margin: 5px;
-}
-.gallery .wrapper .mainGallery .col3 {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
 }
 .gallery .wrapper .mainGallery .col3 li {
   width: calc(33.3333333333% - 5px);
@@ -609,12 +571,6 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
-.blog .wrapper ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
 }
 .blog .wrapper ul .blogPost {
@@ -645,13 +601,7 @@ footer {
   background-size: contain;
   background-repeat: no-repeat;
 }
-footer .wrapper {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: 0;
-}
-footer .wrapper .footerCol {
+footer .footerCol {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -659,47 +609,41 @@ footer .wrapper .footerCol {
   width: 25%;
   height: 42vh;
 }
-footer .wrapper .footerCol h3 {
+footer .footerCol h3 {
   padding-bottom: 2rem;
   letter-spacing: 0.075rem;
   line-height: 1.5rem;
   text-transform: 0;
   text-decoration: none;
 }
-footer .wrapper .first {
+footer .first {
   padding-right: 2rem;
 }
-footer .wrapper .first img {
+footer .first img {
   width: 40%;
   filter: invert(24%) sepia(77%) saturate(4208%) hue-rotate(79deg) brightness(50%) contrast(101%);
 }
-footer .wrapper .first nav ul {
+footer .first nav ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 60%;
+  width: 65%;
 }
-footer .wrapper .second {
+footer .second {
   padding-left: 1rem;
 }
-footer .wrapper .second nav ul {
+footer .second nav ul {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: 0;
   height: 100%;
 }
-footer .wrapper .third li {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: 0;
-}
-footer .wrapper .third li .imageContainer {
+footer .third li .imageContainer {
   width: 33.3333333333%;
 }
-footer .wrapper .third li .textContainer {
+footer .third li .textContainer {
   width: 75%;
   padding-left: 1rem;
   display: flex;
@@ -707,7 +651,7 @@ footer .wrapper .third li .textContainer {
   justify-content: space-evenly;
   align-items: 0;
 }
-footer .wrapper .third li .textContainer .item {
+footer .third li .textContainer .item {
   font-family: "Lora", serif;
   font-size: 0.8rem;
   font-weight: 600;
@@ -716,14 +660,14 @@ footer .wrapper .third li .textContainer .item {
   text-transform: 0rem;
   text-decoration: none;
 }
-footer .wrapper .fourth {
+footer .fourth {
   padding-left: 1.7rem;
 }
-footer .wrapper .fourth form {
+footer .fourth form {
   padding-top: 0.5rem;
   width: 100%;
 }
-footer .wrapper .fourth form input[type=text] {
+footer .fourth form input[type=text] {
   width: 100%;
   padding: 0.5rem 1rem;
 }
